End-to-end tests with WebdriverIO

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,24 @@ services:
       - npm-app:/app/node_modules
     ports:
       - '5300:5300'
-    command: bash -c 'npm start'
+    command: bash -c 'yarn start'
+
+  selenium:
+    image: selenium/standalone-chrome
+    expose:
+      - '4444'
+
+  e2e:
+    build: ./e2e
+    volumes:
+      - './e2e:/e2e'
+      - npm-e2e:/e2e/node_modules
+    depends_on:
+      - selenium
+      - app
 
 volumes:
   npm-app:
+    driver: local
+  npm-e2e:
     driver: local
