--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "React Starter Project",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix src __tests__",
+    "lint": "eslint --fix src",
     "start": "NODE_ENV=development webpack-dev-server",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "test:update": "npm run test -- -u"
   },
   "author": "Vicent Gozalbes <vigosan@gmail.com>",
   "license": "MIT",
