--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^6.10.3",
     "jest": "^19.0.2",
     "prettier": "^1.1.0",
+    "prop-types": "^15.5.8",
     "react-test-renderer": "^15.5.4",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
