--- a/e2e/package.json
+++ b/e2e/package.json
@@ -6,10 +6,16 @@
     "test": "wdio ./wdio.conf.js"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "wdio-mocha-framework": "^0.5.9",
     "webdriverio": "^4.6.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
