--- a/package.json
+++ b/package.json
@@ -35,5 +35,25 @@
   "dependencies": {
     "react": "^15.5.3",
     "react-dom": "^15.5.3"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2",
+      "react"
+    ]
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "plugins": [
+      "react",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": ["error", {
+        "singleQuote": true,
+        "semi": false
+      }]
+    }
   }
 }
