--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.2",
-    "prettier": "^1.14.0",
+    "prettier": "^1.14.2",
     "react-test-renderer": "^16.4.2",
     "style-loader": "^0.22.1",
     "url-loader": "^1.0.1",
@@ -47,7 +47,11 @@
     "express": "^4.16.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "babel": {
     "presets": [
