--- a/package.json
+++ b/package.json
@@ -50,10 +50,18 @@
       "prettier"
     ],
     "rules": {
-      "prettier/prettier": ["error", {
-        "singleQuote": true,
-        "semi": false
-      }]
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true,
+          "semi": false
+        }
+      ]
     }
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/e2e/"
+    ]
   }
 }
