Configure Jest and Webpack’s modules resolution

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     }
   },
   "jest": {
+    "moduleDirectories": ["node_modules", "src"],
     "testPathIgnorePatterns": [
       "/e2e/"
     ]
