--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - npm-app:/app/node_modules
     ports:
       - '8080:8080'
-    command: bash -c 'yarn start'
+    command: bash -c 'yarn start:dev'
 
   selenium:
     image: selenium/standalone-chrome
