--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix src e2e/specs e2e/pageobjects",
-    "start": "NODE_ENV=development webpack-dev-server",
+    "start:dev": "NODE_ENV=development webpack-dev-server",
     "test": "NODE_ENV=test jest",
     "test:update": "npm run test -- -u"
   },
