--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React Starter Project",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix src e2e/specs e2e/pageobjects",
+    "build": "NODE_ENV=production webpack",
+    "lint": "eslint --fix src e2e/specs e2e/pageobjects server",
+    "start": "node server",
     "start:dev": "NODE_ENV=development webpack-dev-server",
     "test": "NODE_ENV=test jest",
     "test:update": "npm run test -- -u"
@@ -27,14 +29,16 @@
     "jest": "^19.0.2",
     "prettier": "^1.2.2",
     "react-test-renderer": "^15.5.4",
-    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "consign": "^0.1.4",
+    "express": "^4.15.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "webpack": "^2.4.1"
   },
   "babel": {
     "presets": [
@@ -60,7 +64,10 @@
     }
   },
   "jest": {
-    "moduleDirectories": ["node_modules", "src"],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "testPathIgnorePatterns": [
       "/e2e/"
     ]
