--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^19.0.2",
     "prettier": "^1.2.2",
     "react-test-renderer": "^15.5.4",
+    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
   },
@@ -37,8 +38,7 @@
     "express": "^4.15.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^2.4.1"
+    "react-dom": "^15.5.4"
   },
   "babel": {
     "presets": [
