Mock CSS with Jest

--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     ],
     "testPathIgnorePatterns": [
       "/e2e/"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   }
 }
