--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^19.0.2",
     "prettier": "^1.2.2",
     "react-test-renderer": "^15.5.4",
@@ -77,7 +78,7 @@
       "/e2e/"
     ],
     "moduleNameMapper": {
-      "\\.(css)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.(css)$": "identity-obj-proxy"
     }
   }
 }
