--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^19.0.2",
     "prettier": "^1.2.2",
     "react-test-renderer": "^15.5.4",
     "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
@@ -78,7 +78,8 @@
       "/e2e/"
     ],
     "moduleNameMapper": {
-      "\\.(css)$": "identity-obj-proxy"
+      "\\.(css)$": "<rootDir>/config/jest/styleMock.js",
+      "\\.(jpe?g|png|gif|svg)$": "<rootDir>/config/jest/fileMock.js"
     }
   }
 }
