--- a/package.json
+++ b/package.json
@@ -16,34 +16,35 @@
   "author": "Vicent Gozalbes <vigosan@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
-    "eslint": "^4.7.2",
-    "eslint-loader": "^1.9.0",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^21.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.1.0",
     "prettier": "^1.7.2",
     "react-test-renderer": "^16.0.0",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.11.1",
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.19.1"
   },
   "dependencies": {
     "consign": "^0.1.6",
-    "express": "^4.15.5",
+    "express": "^4.16.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
